hub/nextra/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nextra-virtualservice
  namespace: nextra
spec:
  hosts:
  - makgol.com
  - nextra.makgol.com
  gateways:
  - istio-system/makgol-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nextra-service
        port:
          number: 80
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
